[tool.poetry]
name = "poetry-snyk-bug"
version = "0.1.0"
description = ""
authors = ["Thibaud Colas <thibaudcolas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
